--- a/src/style.css
+++ b/src/style.css
@@ -88,16 +88,17 @@ h1, h2, h3 {
   width: 100%;
 }
 
-button {
-  background-color: #1a1a1a;
+button, input {
+  background-color: #2b2b2b;
   border-radius: 8px;
-  border: 1px solid transparent;
-  cursor: pointer;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   padding: 0.6em 1.2em;
   transition: border-color 0.25s;
+}
+button, input[type=submit], input[type=reset] {
+  cursor: pointer;
 }
 button:hover {
   border-color: #646cff;
